--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body{
 
 }
 .navbar-item{
+    text-align: center;
     margin-left: 40px;
     margin-right: 40px;
 }
@@ -70,7 +71,7 @@ body{
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     text-align: center;
 }
